--- a/website/index.html
+++ b/website/index.html
@@ -41,6 +41,7 @@ p.topbar.right {
 rainbow {
     background-image: linear-gradient(to left, violet, rgb(137, 18, 223), rgb(0, 162, 255), green, yellow, orange, red);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
